tests/ui/pattern/patkind-litrange-no-expr.stderr
error: expected pattern, found expression `1 + 1`
  --> $DIR/patkind-litrange-no-expr.rs:9:20
   |
LL |                   $( $value => Some($name::$variant), )* // PatKind::Lit
   |                      ^^^^^^ expected pattern
...
LL | / enum_number!(Change {
LL | |     Pos = 1,
LL | |     Neg = -1,
LL | |     Arith = 1 + 1,
LL | | });
   | |__- in this macro invocation
   |
   = note: this error originates in the macro `enum_number` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

